<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Fun2048</string>
    <string name="_2048">2048</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_user_name">神秘人</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">设置</string>
    <string name="score">分数</string>
    <string name="best_score">最高分</string>
    <string name="new_game">新游戏</string>
    <string name="continue_game">继续游戏</string>
    <string name="quit_game">确定退出游戏？</string>


    <string name="user_name">用户名</string>
    <string name="password">密码</string>

    <string name="gender">性别</string>

    <string name="male">男</string>
    <string name="female">女</string>
    <string name="secret">保密</string>
    <string name="avatar">头像</string>
    <string name="login">登录</string>
    <string name="logon">注册</string>
    <string name="submit">提交</string>
    <string name="complete">完成</string>
    <string name="edit_data">编辑资料</string>
    <string name="message_box">玩家留言板</string>
    <string name="rank">排行榜</string>
    <string name="about">软件相关</string>
    <string name="delete_user_warn">您将会删除当前账号的所有相关信息，确定继续吗？</string>
    <string name="user_feedback">用户反馈</string>
    <string name="user_feedback_warn">反馈的信息将采用手机短信形式发送给作者，运营商可能会收取短信产生的资费。</string>
    <string name="volume_on">volume on</string>
    <string name="volume_off">volume off</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="mode4">4*4模式</string>
    <string name="mode5">5*5模式</string>
    <string name="mode6">6*6模式</string>
    <string name="input_suggestion">请输入你对本软件的建议或意见(200字以内)。</string>
    <string name="quit">退出</string>
    <string name="author">By: Boollean</string>

</resources>